--- a/todo
+++ b/todo
@@ -36,7 +36,7 @@ gameplay:
         ☐ @low When a new wave is created, spawn all invaders at random positions in the distance and animate them into formation over a few seconds
         ✔ @low look at 0,0,0 @done(19-09-06 01:23)
         ☐ @low Add more wave formations
-        ☐ @today @high Replace placeholder explosion
+        ☐ @high Replace placeholder explosion
     Bunker:
         ✔ @high Create new model @done(19-09-11 00:42)
         ✔ @critical Add wireframe shader @done(19-09-11 00:42)
@@ -50,9 +50,10 @@ gameplay:
             ✔ Actually hit invaders @done(19-08-26 23:15)
             controls:
                 ✔ PC => tapping space @done(19-08-26 00:33)
-                ☐ @high Mobile => tapping screen (bluetooth gun?)
+                ✔ @high Mobile => tapping screen @done(19-09-11 13:25)
                 ✔ @high Daydream => remote @done(19-09-02 00:11)
                 ☐ @high Rift => controller
+                ☐ @low bluetooth gun on phone
     controls:
         ☐ @low might need to add component to hide/show stuff depending on device/headset
         ☐ @high additional to this, we need to apply different components and setting based on formfactor
@@ -63,7 +64,7 @@ gameplay:
             ✔ @high Daydream, Rift => native @done(19-09-02 00:11)
         Fire:
             ✔ PC => hit space @done(19-08-26 00:33)
-            ☐ @critical Mobile => tap (center)
+            ✔ @critical Mobile => tap (center) @done(19-09-11 13:24)
             @high others => controller:
                 ✔ Daydream @done(19-09-02 00:11)
                 ☐ Rift
@@ -102,7 +103,7 @@ bugs:
     ☐ @high Hide 'gun' on desktop
     ✔ @critical missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
-    ☐ @critical Titlescreen is cut off on phone (possibly gameover as well)
+    ✔ @critical Titlescreen is cut off on phone (possibly gameover as well) @done(19-09-11 12:59)
     ✔ @high Hitbox needs to be a little bit bigger @done(19-09-09 22:44)
     ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
     ☐ @low Glow on title text is cut off because text starts at Y 0
