--- a/todo
+++ b/todo
@@ -12,7 +12,7 @@ Releases:
     April 11:
 
 overall:
-    ✔ @critical Add the payment API -> META tag for Coil @done(20-04-02 22:15)
+    ✔ Add the payment API -> META tag for Coil @done(20-04-02 22:15)
             <meta name="monetization" content="$coil.xrptipbot.com/B6BW9YpKR22WWbQOJ4GsPg">
     ☐ @high Lower the loading time
     ☐ Add all the meta tags
@@ -112,6 +112,7 @@ Optimizations:
     ✘ add something like this to shorten code for gradients `acs = (g, s, c) => g.addColorStop(s, c);` @cancelled(20-04-02 21:47)
 
 bugs:
+    ✔ Fix the ground plane @done(20-04-02 22:33)
     ✔ Hide 'gun' on desktop @done(19-09-12 23:13)
     ✔ missiles not firing in the right direction on desktop @done(19-09-03 13:17)
     ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
