--- a/todo
+++ b/todo
@@ -8,75 +8,25 @@
 
 # the game should slowly become faster and invaders should start shooting back. 
 # avoiding being shot will be hard on everywhere else then Rift. come up with a way to fix this
-Releases:
-    April 11:
 
 overall:
-    ✔ Add the payment API -> META tag for Coil @done(20-04-02 22:15)
-            <meta name="monetization" content="$coil.xrptipbot.com/B6BW9YpKR22WWbQOJ4GsPg">
-    ☐ @high Lower the loading time
-    ☐ Add all the meta tags
-    ✔ Setup build pipelines @done(19-08-23 17:20)
-    ✔ Music - https://sb.bitsnbites.eu/ @done(19-09-10 22:40)
-    ✔ sfx - https://github.com/mneubrand/jsfxr / http://superflashbros.net/as3sfxr/ @done(19-09-09 22:38)
-        ☐ Add alarm sound for near collision, when you are about to die
+    ☐ @high Add all the meta tags
+    ☐ @low Add alarm sound for near collision, when you are about to die
 gameplay:
-    ✔ loose the game @done(19-08-26 23:52)
-    ✔  Add delay between game states. Allow a moment to realize you are gameover. - Often the game goes so fast. Need to be blocked when game over. @done(19-09-12 22:46)
-    ✔  Add a small delay between waves @done(19-09-13 00:24)
     invaders:
-        ✔ spawn invaders @done(19-08-23 00:06)
-            at 90 degrees width in front of the player, far away and up in the sky
-            (0,50,(50 +/-45deg))
-        ✔ move invaders towards player @done(19-08-23 00:16)
-        ✔ create waves of invaders @done(19-09-02 00:11)
-        ✔ Add 'AI' to invaders so they move from left to right, slowly getting closer. @done(19-09-02 23:04)
-        ✔ Every now and then an invader breaks formation and takes its own path (increase values). @done(19-09-12 00:12)
-        ✔ Create a new wave after every invader is shot @done(19-09-03 23:51)
         ☐ @low Have the aliens shoot a missile every now and than.
-        ✔ invaders in different colors @done(19-09-02 00:12)
-        ✔ Create animation when invaders appear @done(19-09-13 00:24)
-        ✔ Every wave the speed increases. Making it impossible to finish the game. @done(19-09-06 22:25)
         ☐ @low At a certain interval a spaceship appears and fires missiles
-        ✘ When a new wave is created, spawn all invaders at random positions in the distance and animate them into formation over a few seconds @cancelled(19-09-13 00:24)
-        ✔ look at 0,0,0 @done(19-09-06 01:23)
-        ✔ Add more wave formations @done(19-09-12 23:58)
-        ✔ Replace placeholder explosion @done(19-09-11 21:57)
-    ✔ Bunker: @done(19-09-12 21:45)
-        ✔ Create new model @done(19-09-11 00:42)
-        ✔ Add wireframe shader @done(19-09-11 00:42)
+        ☐ Invaders should fly in more interesting patterns all around you
     Shooting:
-        ✔ Replace Placeholder gun @done(19-09-12 22:35)
-        ✔ keep track of score, how many invaders did you shoot. @done(19-09-06 21:28)
         ☐ @high show the score on screen
             Maybe at the side of the gun
         ☐ @low add a bounding box for the player that could get hit
         ☐ @high add a second gun when using the payment API
             https://webmonetization.org/docs/api
-        ✔ replace placeholder missile @done(19-09-11 00:42)
-        ✔ shoot invaders: @done(19-09-12 21:45)
-            ✔ bullets should be flying towards where the player looks @done(19-08-26 00:33)
-            ✔ Actually hit invaders @done(19-08-26 23:15)
-            ✔ controls: @done(19-09-12 21:45)
-                ✔ PC => tapping space @done(19-08-26 00:33)
-                ✔ Mobile => tapping screen @done(19-09-11 13:25)
-                ✔ Daydream => remote @done(19-09-02 00:11)
-                ✔ Rift => controller @done(19-09-11 22:24)
-                ✘ bluetooth gun on phone @cancelled(19-09-12 21:45)
     controls:
         ☐ @low might need to add component to hide/show stuff depending on device/headset
         ☐ @high additional to this, we need to apply different components and setting based on formfactor
             To figure out how to detect the device. ==> AFRAME.utils.device
-        ✔ look around: @done(19-09-12 21:45)
-            ✔ PC => mouse, if possible without dragging (look-controls="pointerLockEnabled:true") @done(19-08-24 22:56)
-            ✔ Mobile => Gyro @done(19-09-09 21:42)
-            ✔ Daydream, Rift => native @done(19-09-02 00:11)
-        ✔ Fire: @done(19-09-12 21:45)
-            ✔ PC => hit space @done(19-08-26 00:33)
-            ✔ Mobile => tap (center) @done(19-09-11 13:24)
-            ✔ others => controller: @done(19-09-11 22:23)
-                ✔ Daydream @done(19-09-02 00:11)
-                ✔ Rift @done(19-09-11 22:23)
         duck: 
             # probably not going to implement ducking or missiles
             ☐ @low PC => pressing A or D to duck left or right
@@ -87,47 +37,20 @@ gameplay:
         ☐ @low full screen goes into splitscreen, is this preventable?
 
 design:
-    ✔ generate synthwave environment: @done(19-09-12 21:44)
-        ✔ ground @done(19-09-03 13:16)
-        ✔ Sky @done(19-09-03 13:16)
-        ✔ mountains @done(19-09-06 01:23)
-        ✔ sun @done(19-09-05 23:13)
-
-    ✔ Create design for aliens @done(19-09-01 21:07)
     ☐ @high Add more different invaders
-    ✔ animate explosions @done(19-09-11 21:57)
     ☐ @low design and animate rockets with fire and smoke
-    ✔ Title screen @done(19-09-03 23:32)
-    ✔ Gameover screen - with last score @done(19-09-06 23:28)
     ☐ @low Add highest score (local storage) to gameover screen
-    ✔ When restarting the you have to fire twice @done(19-09-12 22:47)
     ☐ @low Glow/Bloom effect
 
 Optimizations:
-    ✘ Stay under 13Kb @cancelled(20-04-02 21:46)
     ☐ @low Optimize shaders
     ☐ @low use instancing for models (won't fit in 13k)
-    ✔ restructure duplicate code with shaders and materials over components @done(19-09-06 23:53)
-    ✔ optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts; @done(19-09-09 23:24)
-    ✘ add something like this to shorten code for gradients `acs = (g, s, c) => g.addColorStop(s, c);` @cancelled(20-04-02 21:47)
 
 bugs:
-    ✔ Fix the ground plane @done(20-04-02 22:33)
-    ✔ Hide 'gun' on desktop @done(19-09-12 23:13)
-    ✔ missiles not firing in the right direction on desktop @done(19-09-03 13:17)
-    ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23)
-    ✔ Titlescreen is cut off on phone (possibly gameover as well) @done(19-09-11 12:59)
-    ✔ Hitbox needs to be a little bit bigger @done(19-09-09 22:44)
     ☐ @low Sometimes when all invaders are shot we don't get the next wave.(probably due to godmode)
     ☐ @low Glow on title text is cut off because text starts at Y 0
-    ✔ Rapid fire when space is continuesly pressed (set boolean on down, remove on up) @done(19-09-09 22:42)
-    ✔ Initial rendering music lags the game @done(19-09-11 17:00)
-    ✔ Music must loop @done(19-09-11 21:58)
-    ✔ wave number does not reset @done(19-09-11 22:01)
     ☐ @high Make rotations work on all devices.
-    ✔ directly game over after start @done(19-09-12 22:46)
     ☐ @high Bullets start above the gun in VR
-
 
 Could haves / Would likes /:
     ☐ @low add spacial sound and invaders all around
@@ -135,14 +58,92 @@ Could haves / Would likes /:
         - konami code
     ☐ @low Cheats => by adding certain text url
         cheats:
-            ✔ `godmode` is added @done(19-09-01 22:08)
             ☐ @low `wave=X` to start at wave X
 
-Sumbission:
-    ✔ Small screenshot (160px × 160px) @done(19-09-13 10:30)
-    ✔ Big screenshot (400px × 250px) @done(19-09-13 10:18)
-    ✔ Game description, controls etc @done(19-09-13 10:18)
 
 # ideas and random stuff
-✔ have one invader break formation every now and then, just increase the speed by much. @done(20-04-02 21:48)
-- Particles : https://github.com/mrdoob/three.js/blob/master/examples/webgl_buffergeometry_custom_attributes_particles.html
+- Particles : 
+    https://github.com/mrdoob/three.js/blob/master/examples/webgl_buffergeometry_custom_attributes_particles.html
+
+
+Archive:
+  ✔ Add the payment API -> META tag for Coil @done(20-04-02 22:15) @project(overall)
+    <meta name="monetization" content="$coil.xrptipbot.com/B6BW9YpKR22WWbQOJ4GsPg">
+  ✔ Lower the loading time @done(20-04-06 16:00) @project(overall)
+    ~ moved music to mp3, really passing the 13kb now.
+  ✔ Setup build pipelines @done(19-08-23 17:20) @project(overall)
+  ✔ Music - https://sb.bitsnbites.eu/ @done(19-09-10 22:40) @project(overall)
+  ✔ sfx - https://github.com/mneubrand/jsfxr / http://superflashbros.net/as3sfxr/ @done(19-09-09 22:38) @project(overall)
+  ✔ loose the game @done(19-08-26 23:52) @project(gameplay)
+  ✔  Add delay between game states. Allow a moment to realize you are gameover. - Often the game goes so fast. Need to be blocked when game over. @done(19-09-12 22:46) @project(gameplay)
+  ✔  Add a small delay between waves @done(19-09-13 00:24) @project(gameplay)
+  ✔ spawn invaders @done(19-08-23 00:06) @project(gameplay.invaders)
+    at 90 degrees width in front of the player, far away and up in the sky
+    (0,50,(50 +/-45deg))
+  ✔ move invaders towards player @done(19-08-23 00:16) @project(gameplay.invaders)
+  ✔ create waves of invaders @done(19-09-02 00:11) @project(gameplay.invaders)
+  ✔ Add 'AI' to invaders so they move from left to right, slowly getting closer. @done(19-09-02 23:04) @project(gameplay.invaders)
+  ✔ Every now and then an invader breaks formation and takes its own path (increase values). @done(19-09-12 00:12) @project(gameplay.invaders)
+  ✔ Create a new wave after every invader is shot @done(19-09-03 23:51) @project(gameplay.invaders)
+  ✔ invaders in different colors @done(19-09-02 00:12) @project(gameplay.invaders)
+  ✔ Create animation when invaders appear @done(19-09-13 00:24) @project(gameplay.invaders)
+  ✔ Every wave the speed increases. Making it impossible to finish the game. @done(19-09-06 22:25) @project(gameplay.invaders)
+  ✘ When a new wave is created, spawn all invaders at random positions in the distance and animate them into formation over a few seconds @cancelled(19-09-13 00:24) @project(gameplay.invaders)
+  ✔ look at 0,0,0 @done(19-09-06 01:23) @project(gameplay.invaders)
+  ✔ Add more wave formations @done(19-09-12 23:58) @project(gameplay.invaders)
+  ✔ Replace placeholder explosion @done(19-09-11 21:57) @project(gameplay.invaders)
+  ✔ Bunker: @done(19-09-12 21:45) @project(gameplay)
+  ✔ Create new model @done(19-09-11 00:42) @project(gameplay)
+  ✔ Add wireframe shader @done(19-09-11 00:42) @project(gameplay)
+  ✔ Replace Placeholder gun @done(19-09-12 22:35) @project(gameplay.Shooting)
+  ✔ keep track of score, how many invaders did you shoot. @done(19-09-06 21:28) @project(gameplay.Shooting)
+  ✔ replace placeholder missile @done(19-09-11 00:42) @project(gameplay.Shooting)
+  ✔ shoot invaders: @done(19-09-12 21:45) @project(gameplay.Shooting)
+  ✔ bullets should be flying towards where the player looks @done(19-08-26 00:33) @project(gameplay.Shooting)
+  ✔ Actually hit invaders @done(19-08-26 23:15) @project(gameplay.Shooting)
+  ✔ controls: @done(19-09-12 21:45) @project(gameplay.Shooting)
+  ✔ PC => tapping space @done(19-08-26 00:33) @project(gameplay.Shooting)
+  ✔ Mobile => tapping screen @done(19-09-11 13:25) @project(gameplay.Shooting)
+  ✔ Daydream => remote @done(19-09-02 00:11) @project(gameplay.Shooting)
+  ✔ Rift => controller @done(19-09-11 22:24) @project(gameplay.Shooting)
+  ✘ bluetooth gun on phone @cancelled(19-09-12 21:45) @project(gameplay.Shooting)
+  ✔ look around: @done(19-09-12 21:45) @project(gameplay.controls)
+  ✔ PC => mouse, if possible without dragging (look-controls="pointerLockEnabled:true") @done(19-08-24 22:56) @project(gameplay.controls)
+  ✔ Mobile => Gyro @done(19-09-09 21:42) @project(gameplay.controls)
+  ✔ Daydream, Rift => native @done(19-09-02 00:11) @project(gameplay.controls)
+  ✔ Fire: @done(19-09-12 21:45) @project(gameplay.controls)
+  ✔ PC => hit space @done(19-08-26 00:33) @project(gameplay.controls)
+  ✔ Mobile => tap (center) @done(19-09-11 13:24) @project(gameplay.controls)
+  ✔ others => controller: @done(19-09-11 22:23) @project(gameplay.controls)
+  ✔ Daydream @done(19-09-02 00:11) @project(gameplay.controls)
+  ✔ Rift @done(19-09-11 22:23) @project(gameplay.controls)
+  ✔ generate synthwave environment: @done(19-09-12 21:44) @project(design)
+  ✔ ground @done(19-09-03 13:16) @project(design)
+  ✔ Sky @done(19-09-03 13:16) @project(design)
+  ✔ mountains @done(19-09-06 01:23) @project(design)
+  ✔ sun @done(19-09-05 23:13) @project(design)
+  ✔ Create design for aliens @done(19-09-01 21:07) @project(design)
+  ✔ animate explosions @done(19-09-11 21:57) @project(design)
+  ✔ Title screen @done(19-09-03 23:32) @project(design)
+  ✔ Gameover screen - with last score @done(19-09-06 23:28) @project(design)
+  ✔ When restarting the you have to fire twice @done(19-09-12 22:47) @project(design)
+  ✘ Stay under 13Kb @cancelled(20-04-02 21:46) @project(Optimizations)
+  ✔ restructure duplicate code with shaders and materials over components @done(19-09-06 23:53) @project(Optimizations)
+  ✔ optimize mountains everywhere there's a lot of 0; don't add face if all 3 verts are at Y:0, than remove unused verts; @done(19-09-09 23:24) @project(Optimizations)
+  ✘ add something like this to shorten code for gradients `acs = (g, s, c) => g.addColorStop(s, c);` @cancelled(20-04-02 21:47) @project(Optimizations)
+  ✔ Fix the ground plane @done(20-04-02 22:33) @project(bugs)
+  ✔ Hide 'gun' on desktop @done(19-09-12 23:13) @project(bugs)
+  ✔ missiles not firing in the right direction on desktop @done(19-09-03 13:17) @project(bugs)
+  ✔ Titlescreen has to be a bit smaller for DayDream @done(19-09-06 01:23) @project(bugs)
+  ✔ Titlescreen is cut off on phone (possibly gameover as well) @done(19-09-11 12:59) @project(bugs)
+  ✔ Hitbox needs to be a little bit bigger @done(19-09-09 22:44) @project(bugs)
+  ✔ Rapid fire when space is continuesly pressed (set boolean on down, remove on up) @done(19-09-09 22:42) @project(bugs)
+  ✔ Initial rendering music lags the game @done(19-09-11 17:00) @project(bugs)
+  ✔ Music must loop @done(19-09-11 21:58) @project(bugs)
+  ✔ wave number does not reset @done(19-09-11 22:01) @project(bugs)
+  ✔ directly game over after start @done(19-09-12 22:46) @project(bugs)
+  ✔ `godmode` is added @done(19-09-01 22:08) @project(Could haves / Would likes /.cheats)
+  ✔ Small screenshot (160px × 160px) @done(19-09-13 10:30) @project(Sumbission)
+  ✔ Big screenshot (400px × 250px) @done(19-09-13 10:18) @project(Sumbission)
+  ✔ Game description, controls etc @done(19-09-13 10:18) @project(Sumbission)
+  ✔ have one invader break formation every now and then, just increase the speed by much. @done(20-04-02 21:48)
