--- a/todo
+++ b/todo
@@ -23,11 +23,11 @@ TODO:
 Must have:
     ✔ Hud for showing score @done(20-10-18 12:34)
     ☐ More levels
-    ☐ Replace title, game-over and 'press anykey' with image so they look the same on all devices
+    ✔ Replace title, game-over and 'press anykey' with image so they look the same on all devices @done(21-09-20 07:48)
     ✔ fix ground @done(20-10-17 10:36)
 
 Should have:
-    ☐ Integration with CA scoring
+    ✔ Integration with CA scoring @done(21-09-20 07:48)
     ☐ More different enemies
     ☐ better/more music
     ☐ show wave on Hud
