--- a/todo
+++ b/todo
@@ -29,9 +29,9 @@ TODO:
         ✔ Make Gun Shoot @done(23-08-11 21:39)
         ☐ Make Gun shoot in VR
         Gameplay:
-            ☐ Hit Aliens        
+            ✔ Hit Aliens @done(23-08-11 23:14)
             ☐ Game over when they are too close
-        ☐ Add SFX
+        ✔ Add SFX @done(23-08-11 23:14)
         ☐ Add Music
         ☐ Add Particles
     Improvements:
